[bumpversion]
current_version = 0.0.1
commit = true
tag = true

[bumpversion:file:signal_tools/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
name = hgcal-db-backend
version = attr: hgcal_db_backend.__version__
author = Alexander Becker
author_email = a.becker@cern.ch
description = A web server that provides a User interface and api to the HGCAL database
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = database, web-ui, cern,
python_requires = >=3.10
license = GPL3
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Environment :: Console

[options]
include_package_data = True
packages = find:
install_requires =
  flask

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    hepa.tests*

#[options.entry_points]
#console_scripts =
#    signal-tools = signal_tools.cli:file_cli
#    signal-stream-tools = signal_tools.cli:stream_cli
